chore: :see_no_evil: actualizar el `.gitignore` del directorio raíz

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,29 @@
 /bazel-out
 __pycache__
 
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/
+
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+media
+
+# Backup files # 
+*.bak 
+
+# Python # 
+*.py[cod] 
+*$py.class
+
 # dependencies
 /node_modules
 
